<resources>
    <string name="app_name">Church++</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome!"</string>
    <string name="esqueceu_a_senha">Esqueceu a senha</string>
    <string name="despesas">Despesas</string>
    <string name="in_cio">Início</string>
    <string name="membros">Membros</string>
    <string name="contribui_es">Contribuições</string>
    <string name="defini_es">Definições</string>
</resources>